WOOOOOgit add .git add .

--- a/LogAdventure/src/main/resources/static/index.html
+++ b/LogAdventure/src/main/resources/static/index.html
@@ -18,8 +18,17 @@
 <table>
 	<thead>
 		<tr>
+		<th>Id</th>
+		<th>Category</th>
+		<th>Details</th>
+		<th>Duration</th>
+		<th>Activity</th>
 		</tr>
 	</thead>
+	<tbody id="logTable">
+		<tr>
+		</tr>
+	</tbody>
 </table>
 </div>
 
