CRUD functioning in js

--- a/LogAdventure/src/main/resources/static/index.html
+++ b/LogAdventure/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
 		<th>Category</th>
 		<th>Details</th>
 		<th>Duration</th>
-		<th>Activity</th>
+	<!-- 	<th>Activity</th> -->
 		</tr>
 	</thead>
 	<tbody id="logTableBody">
@@ -42,7 +42,7 @@
 	<input name="category" type="text"><br>
 	
 	<label for="activity">Activity</label>
-	<input name="activity" type="text"><br>
+	<input name="activity" type="text"><br> 
 	
 	<label for="duration">Duration</label>
 	<input name="duration" type="text"><br>
@@ -56,7 +56,7 @@
 
 <div id="updateLogDiv"></div>
 
-<div value="submit" id="deleteLogDiv"></div>
+
 
 </main>
 
